removed optional theme that isn't needed, added todo to html to split up sections for code maintainability

--- a/home.html
+++ b/home.html
@@ -7,8 +7,7 @@
   <meta name="description" content="Get A Room">
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
-  <!-- Optional theme -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css" integrity="sha384-aUGj/X2zp5rLCbBxumKTCw2Z50WgIr1vs/PFN4praOTvYXWlVyh2UtNUU0KAUhAX" crossorigin="anonymous">
+
   <!--css-->
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
@@ -16,12 +15,26 @@
 <body>
  <div class="container-fluid"> <!--start container-->
 
+  <!-- TODO Nav Section -->
 
 
+  <!-- TODO Header Section -->
+    <!-- TODO Timed image change with plugin -->
+    <!-- TODO Maybe parallax effect on scroll -->
+
+  <!-- TODO destination input / check in input / check out input -->
 
 
+  <!-- TODO Slide Down filter -->
 
 
+  <!-- TODO Small Carousel with recommended or popular destinations -->
+
+
+  <!-- TODO List of hotels that appear according to destination selected  -->
+
+
+  <!-- TODO Modals for each hotel, including an ignore button that closes modal and removes hotel from list -->
 
 
 </div> <!--end of container-->
