--- a/home.html
+++ b/home.html
@@ -13,14 +13,30 @@
 </head>
 
 <body>
- <div class="container-fluid"> <!--start container-->
 
   <!-- TODO Nav Section -->
+  <div class="navbar navbar-default navbar-fixed-top">
+    <div id="nav-scroller" class="container-fluid ">  
+      <a href="#" class="navbar-brand">Hotel Site</a>
 
+      <ul class="nav navbar-nav navbar-right">
+        <li>
+          <a href="#">About Us</a>
+        </li>
+        <li>
+          <a href="#">Deals</a>
+        </li>
+      </ul>
+    </div>
+  </div>
 
   <!-- TODO Header Section -->
     <!-- TODO Timed image change with plugin -->
     <!-- TODO Maybe parallax effect on scroll -->
+
+  <div id="head-images" class="container-fluid">
+
+  </div>
 
   <!-- TODO destination input / check in input / check out input -->
 
@@ -36,8 +52,6 @@
 
   <!-- TODO Modals for each hotel, including an ignore button that closes modal and removes hotel from list -->
 
-
-</div> <!--end of container-->
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
