added some css to show image header section

--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
 <body>
 
   <!-- TODO Nav Section -->
-  <div class="navbar navbar-default navbar-fixed-top">
+  <div class="navbar navbar-inverse navbar-fixed-top">
     <div id="nav-scroller" class="container-fluid ">  
       <a href="#" class="navbar-brand">Hotel Site</a>
 
