--- a/home.html
+++ b/home.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-  <meta charset="utf-8">
   <title>GetARoom</title>
+  <meta charset="utf-8">
   <meta name="description" content="Get A Room">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
 
@@ -15,18 +16,30 @@
 <body>
 
   <!-- TODO Nav Section -->
-  <div class="navbar navbar-inverse navbar-fixed-top">
-    <div id="nav-scroller" class="container-fluid ">  
-      <a href="#" class="navbar-brand">Hotel Site</a>
+  <div  id="nav-scroller" class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container-fluid">  
 
-      <ul class="nav navbar-nav navbar-right">
-        <li>
-          <a href="#">About Us</a>
-        </li>
-        <li>
-          <a href="#">Deals</a>
-        </li>
-      </ul>
+      <div class="navbar-header">
+      <a href="#" class="navbar-brand">Hotel Site</a>
+      <button class="navbar-toggle" data-toggle="collapse" data-target="#nav-links">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+
+      </div>
+      
+      <div id="nav-links" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav navbar-right">
+              <li>
+                <a href="#">Login</a>
+              </li>
+              <li>
+                <a href="#">Sign Up</a>
+              </li>
+            </ul>
+      </div>  
+      
     </div>
   </div>
 
