might still be able to salvage scroll effect, with some sacrifices.

--- a/home.html
+++ b/home.html
@@ -16,10 +16,10 @@
 <body>
 
   <!-- TODO Nav Section -->
-  <div  id="nav-scroller" class="navbar navbar-inverse navbar-fixed-top">
+  <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">  
 
-      <div class="navbar-header">
+      <div  id="nav-scroller" class="navbar-header">
       <a href="#" class="navbar-brand">Hotel Site</a>
       <button class="navbar-toggle" data-toggle="collapse" data-target="#nav-links">
         <span class="icon-bar"></span>
