--- a/home.html
+++ b/home.html
@@ -19,14 +19,13 @@
   <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">  
 
-      <div  id="nav-scroller" class="navbar-header">
-      <a href="#" class="navbar-brand">Hotel Site</a>
-      <button class="navbar-toggle" data-toggle="collapse" data-target="#nav-links">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-
+      <div id="nav-scroller" class="navbar-header">
+        <a href="#" class="navbar-brand">Hotel Site</a>
+        <button id="nav-toggle-button" class="navbar-toggle" data-toggle="collapse" data-target="#nav-links">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
       </div>
       
       <div id="nav-links" class="collapse navbar-collapse">
