--- a/home.html
+++ b/home.html
@@ -57,6 +57,60 @@
 
 
   <!-- TODO Small Carousel with recommended or popular destinations -->
+  <div id="vacationCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#vacationCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#vacationCarousel" data-slide-to="1"></li>
+    <li data-target="#vacationCarousel" data-slide-to="2"></li>
+    <li data-target="#vacationCarousel" data-slide-to="3"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img src="img/sky.jpg" alt="sky">
+      <div class="carousel-caption">
+        <h3>Views</h3>
+        <p>Beautiful Views</p>
+      </div>
+    </div>
+
+    <div class="item">
+      <img src="img/watefall.jpg" alt="waterfall">
+      <div class="carousel-caption">
+        <h3>Waterfall</h3>
+        <p>Beautiful Waterfalls</p>
+      </div>
+    </div>
+
+    <div class="item">
+      <img src="img/trees.jpg" alt="trees">
+      <div class="carousel-caption">
+        <h3>Forest</h3>
+        <p>Beatiful Forests</p>
+      </div>
+    </div>
+
+    <div class="item">
+      <img src="img/mountain.jpg" alt="mountain">
+      <div class="carousel-caption">
+        <h3>Mountain</h3>
+        <p>Beatiful Mountains.</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Left and right controls -->
+  <a class="left carousel-control" href="#vacationCarousel" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#vacationCarousel" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 
 
   <!-- TODO List of hotels that appear according to destination selected  -->
