got the image change to work, need to add fade in

--- a/home.html
+++ b/home.html
@@ -45,9 +45,7 @@
   <!-- TODO Header Section -->
     
 
-  <div id="head-images" class="container-fluid">
-
-  </div>
+  <div id="head-images" class="container-fluid"></div>
 
   <!-- TODO destination input / check in input / check out input -->
 
