--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
 
   <!-- TODO Nav Section -->
   <div class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container-fluid">  
+    <div class="container-fluid">
 
       <div id="nav-scroller" class="navbar-header">
         <a href="#" class="navbar-brand">Hotel Site</a>
@@ -27,24 +27,24 @@
           <span class="icon-bar"></span>
         </button>
       </div>
-      
+
       <div id="nav-links" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav navbar-right">
-              <li>
-                <a href="#">Login</a>
-              </li>
-              <li>
-                <a href="#">Sign Up</a>
-              </li>
-            </ul>
-      </div>  
-      
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <a href="#">Login</a>
+          </li>
+          <li>
+            <a href="#">Sign Up</a>
+          </li>
+        </ul>
+      </div>
+
     </div>
   </div>
 
   <!-- TODO Header Section -->
-    <!-- TODO Timed image change with plugin -->
-    <!-- TODO Maybe parallax effect on scroll -->
+  <!-- TODO Timed image change with plugin -->
+  <!-- TODO Maybe parallax effect on scroll -->
 
   <div id="head-images" class="container-fluid">
 
@@ -57,60 +57,64 @@
 
 
   <!-- TODO Small Carousel with recommended or popular destinations -->
-  <div id="vacationCarousel" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#vacationCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#vacationCarousel" data-slide-to="1"></li>
-    <li data-target="#vacationCarousel" data-slide-to="2"></li>
-    <li data-target="#vacationCarousel" data-slide-to="3"></li>
-  </ol>
+  <div class="row">
+    <div class="col-xs-12 col-sm-10 col-sm-offset-1">
+      <div id="vacationCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#vacationCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#vacationCarousel" data-slide-to="1"></li>
+          <li data-target="#vacationCarousel" data-slide-to="2"></li>
+          <li data-target="#vacationCarousel" data-slide-to="3"></li>
+        </ol>
 
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
-    <div class="item active">
-      <img src="img/sky.jpg" alt="sky">
-      <div class="carousel-caption">
-        <h3>Views</h3>
-        <p>Beautiful Views</p>
-      </div>
-    </div>
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+          <div class="item active">
+            <img src="img/sky.jpg" alt="sky">
+            <div class="carousel-caption">
+              <h3>Views</h3>
+              <p>Beautiful Views</p>
+            </div>
+          </div>
 
-    <div class="item">
-      <img src="img/watefall.jpg" alt="waterfall">
-      <div class="carousel-caption">
-        <h3>Waterfall</h3>
-        <p>Beautiful Waterfalls</p>
-      </div>
-    </div>
+          <div class="item">
+            <img src="img/watefall.jpg" alt="waterfall">
+            <div class="carousel-caption">
+              <h3>Waterfall</h3>
+              <p>Beautiful Waterfalls</p>
+            </div>
+          </div>
 
-    <div class="item">
-      <img src="img/trees.jpg" alt="trees">
-      <div class="carousel-caption">
-        <h3>Forest</h3>
-        <p>Beatiful Forests</p>
-      </div>
-    </div>
+          <div class="item">
+            <img src="img/trees.jpg" alt="trees">
+            <div class="carousel-caption">
+              <h3>Forest</h3>
+              <p>Beatiful Forests</p>
+            </div>
+          </div>
 
-    <div class="item">
-      <img src="img/mountain.jpg" alt="mountain">
-      <div class="carousel-caption">
-        <h3>Mountain</h3>
-        <p>Beatiful Mountains.</p>
+          <div class="item">
+            <img src="img/mountain.jpg" alt="mountain">
+            <div class="carousel-caption">
+              <h3>Mountain</h3>
+              <p>Beatiful Mountains.</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#vacationCarousel" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#vacationCarousel" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
     </div>
   </div>
-
-  <!-- Left and right controls -->
-  <a class="left carousel-control" href="#vacationCarousel" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#vacationCarousel" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
 
 
   <!-- TODO List of hotels that appear according to destination selected  -->
