resolving merge, hopefully

--- a/home.html
+++ b/home.html
@@ -46,9 +46,7 @@
   <!-- TODO Timed image change with plugin -->
   <!-- TODO Maybe parallax effect on scroll -->
 
-  <div id="head-images" class="container-fluid">
-
-  </div>
+  <div id="head-images" class="container-fluid"></div>
 
   <!-- TODO destination input / check in input / check out input -->
 
