--- a/home.html
+++ b/home.html
@@ -50,7 +50,8 @@
 
   </div>
 
-  <!-- TODO destination input / check in input / check out input -->
+  <!-- TODO destination input / check in input / check out 
+  input -->
 
 
   <!-- TODO Slide Down filter -->
