--- a/home.html
+++ b/home.html
@@ -54,10 +54,37 @@
 
   <!-- TODO Slide Down filter -->
 
+  <!-- Content Break-->
+  <div class="row">
+    <h2 id="subhead">Recommended Vacations Spots</h2>
+      <div class="recommendation">
+        <div class="col-xs-12 col-sm-3">
+          <div class="nyCity">
+            <h2 class="locations">New York</h2>
+          </div> 
+        </div> 
+        <div class="col-xs-12 col-sm-3">
+          <div class="laCity">
+            <h2 class="locations">Los Angeles</h2>
+          </div> 
+        </div> 
+        <div class="col-xs-12 col-sm-3">
+          <div class="frCity">
+            <h2 class="locations">Paris</h2>
+          </div> 
+        </div> 
+        <div class="col-xs-12 col-sm-3">
+          <div class="brCity">
+            <h2 class="locations">London</h2>
+          </div> 
+        </div>
+      </div>
+  </div>
+
 
   <!-- TODO Small Carousel with recommended or popular destinations -->
   <div class="row">
-    <div class="col-xs-12 col-sm-10 col-sm-offset-1">
+    <div class="col-xs-12 col-sm-6 col-sm-offset-3">
       <div id="vacationCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
