add city images to carousel

--- a/home.html
+++ b/home.html
@@ -50,37 +50,15 @@
 
   <!-- TODO destination input / check in input / check out 
   input -->
-
-
+ 
   <!-- TODO Slide Down filter -->
 
   <!-- Content Break-->
   <div class="row">
-    <h2 id="subhead">Recommended Vacations Spots</h2>
-      <div class="recommendation">
-        <div class="col-xs-12 col-sm-3">
-          <div class="nyCity">
-            <h2 class="locations">New York</h2>
-          </div> 
-        </div> 
-        <div class="col-xs-12 col-sm-3">
-          <div class="laCity">
-            <h2 class="locations">Los Angeles</h2>
-          </div> 
-        </div> 
-        <div class="col-xs-12 col-sm-3">
-          <div class="frCity">
-            <h2 class="locations">Paris</h2>
-          </div> 
-        </div> 
-        <div class="col-xs-12 col-sm-3">
-          <div class="brCity">
-            <h2 class="locations">London</h2>
-          </div> 
-        </div>
-      </div>
+    <div class="col-md-12 col-sm-12">
+      <h2 id="subhead">Recommended Vacations Spots</h2>     
+    </div>
   </div>
-
 
   <!-- TODO Small Carousel with recommended or popular destinations -->
   <div class="row">
@@ -97,34 +75,34 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
           <div class="item active">
-            <img src="img/sky.jpg" alt="sky">
+            <img src="img/NYC.jpg" alt="sky" class="city">
             <div class="carousel-caption">
-              <h3>Views</h3>
-              <p>Beautiful Views</p>
+              <h3>New York City</h3>
+              <p>Big Apple</p>
             </div>
           </div>
 
           <div class="item">
-            <img src="img/watefall.jpg" alt="waterfall">
+            <img src="img/paris.jpg" alt="waterfall" class="city">
             <div class="carousel-caption">
-              <h3>Waterfall</h3>
-              <p>Beautiful Waterfalls</p>
+              <h3>Paris</h3>
+              <p>City of Love</p>
             </div>
           </div>
 
           <div class="item">
-            <img src="img/trees.jpg" alt="trees">
+            <img src="img/los.jpg" alt="trees" class="city">
             <div class="carousel-caption">
-              <h3>Forest</h3>
-              <p>Beatiful Forests</p>
+              <h3>Los Angeles</h3>
+              <p>Visit Hollywood</p>
             </div>
           </div>
 
           <div class="item">
-            <img src="img/mountain.jpg" alt="mountain">
+            <img src="img/london2.jpg" alt="mountain" class="city">
             <div class="carousel-caption">
-              <h3>Mountain</h3>
-              <p>Beatiful Mountains.</p>
+              <h3>London</h3>
+              <p>Across the Pond</p>
             </div>
           </div>
         </div>
