added link tag to final image in carousel

--- a/home.html
+++ b/home.html
@@ -99,7 +99,7 @@
           </div>
 
           <div class="item" id="london-item">
-            <a href="#"></a><img src="img/london2.jpg" alt="London" class="city"></a>
+            <a href="#"><img src="img/london2.jpg" alt="London" class="city"></a>
             <div class="carousel-caption">
               <h3>London</h3>
               <p>Across the Pond</p>
