--- a/home.html
+++ b/home.html
@@ -49,6 +49,27 @@
 
   <!-- TODO destination input / check in input / check out 
   input -->
+  <div class="row">
+    <form class="form-group searchbar">
+      <div class="col-sm-4 col-sm-offset-1">
+        <input type="text" class="form-control" id="search" 
+        placeholder="Where do you want to go?">
+      </div>
+      <div class="col-sm-2">
+        <input type="date" class="form-control calendar" placeholder="Check In">
+      </div>
+      <div class="col-sm-2">
+        <input type="date" class="form-control calendar" placeholder="Check Out">
+      </div>
+      <div class="col-sm-1">
+        <input type="dropdown" class="form-control guest" placeholder="Guests">
+      </div>
+      <div class="col-sm-1">
+        <button class="btn btn-primary submit">Search</button>
+      </div>
+    </form> 
+  </div>
+ 
  
   <!-- TODO Slide Down filter -->
 
