--- a/home.html
+++ b/home.html
@@ -49,6 +49,7 @@
 
   <!-- TODO destination input / check in input / check out 
   input -->
+  <div class="container-fluid">
   <div class="row">
     <form class="form-group searchbar">
       <div class="col-sm-4 col-sm-offset-1">
@@ -62,25 +63,27 @@
         <input type="date" class="form-control calendar" placeholder="Check Out">
       </div>
       <div class="col-sm-1">
-        <input type="dropdown" class="form-control guest" placeholder="Guests">
+        <input type="dropdown" class="form-control dropdown" placeholder="Guests">
       </div>
       <div class="col-sm-1">
         <button class="btn btn-primary submit">Search</button>
       </div>
     </form> 
   </div>
- 
+ </div>
  
   <!-- TODO Slide Down filter -->
 
   <!-- Content Break-->
+  <div class="container-fluid">
   <div class="row">
     <div class="col-md-12 col-sm-12">
       <h2 id="subhead">Recommended Vacations Spots</h2>     
     </div>
   </div>
-
+  </div>
   <!-- TODO Small Carousel with recommended or popular destinations -->
+  <div class="container-fluid">
   <div class="row">
     <div class="col-xs-12 col-sm-6 col-sm-offset-3">
       <div id="vacationCarousel" class="carousel slide" data-ride="carousel">
@@ -139,7 +142,7 @@
       </div>
     </div>
   </div>
-
+</div>
 
   <!-- TODO List of hotels that appear according to destination selected  -->
 
