added dropdown to guest button

--- a/home.html
+++ b/home.html
@@ -63,7 +63,20 @@
         <input type="date" class="form-control calendar" placeholder="Check Out">
       </div>
       <div class="col-sm-1">
-        <input type="dropdown" class="form-control dropdown" placeholder="Guests">
+        <button data-toggle="dropdown" class="form-control dropdown-toggle">Guests<span class="caret"></span></button>
+  <ul class="dropdown-menu">
+    <option value="1">1</option>
+    <option value="2">2</option>
+    <option value="3">3</option>
+    <option value="4">4</option>
+    <option value="5">5</option>
+    <option value="6">6</option>
+    <option value="7">7</option>
+    <option value="8">8</option>
+    <option value="9">9</option>
+    <option value="10">10</option>
+    
+  </ul>
       </div>
       <div class="col-sm-1">
         <button class="btn btn-primary submit">Search</button>
