added a background pattern to body

--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
 <body>
 
   <!-- TODO Nav Section -->
-  <div class="navbar navbar-inverse navbar-fixed-top">
+  <div class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
 
       <div id="nav-scroller" class="navbar-header">
