--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
 
 <body>
 
-  <!-- TODO Nav Section -->
+  <!-- Nav Section -->
   <div class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
 
@@ -42,7 +42,7 @@
     </div>
   </div>
 
-  <!-- TODO Header Section -->
+  <!-- Header Section -->
 
   <!-- Image changer -->
   <div id="head-images" class="container-fluid"></div>
@@ -86,6 +86,9 @@
  </div>
  
   <!-- TODO Slide Down filter -->
+
+  <!-- List items -->
+  
 
   <!-- Content Break-->
   <div class="container-fluid">
