--- a/home.html
+++ b/home.html
@@ -45,7 +45,12 @@
   <!-- TODO Header Section -->
 
   <!-- Image changer -->
-  <div id="head-images" class="container-fluid"></div>
+  <div id="head-images" class="container-fluid">
+    <div class="row">
+      <div class="col-">
+    </div>
+
+  </div>
 
   <!-- TODO destination input / check in input / check out 
   input -->
