--- a/home.html
+++ b/home.html
@@ -15,8 +15,8 @@
 
 <body>
 
-  <!-- Nav Section -->
-  <div class="navbar navbar-default navbar-fixed-top">
+  <!-- TODO Nav Section -->
+  <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
 
       <div id="nav-scroller" class="navbar-header">
@@ -42,15 +42,10 @@
     </div>
   </div>
 
-  <!-- Header Section -->
+  <!-- TODO Header Section -->
 
   <!-- Image changer -->
-  <div id="head-images" class="container-fluid">
-    <div class="row">
-      <div class="col-">
-    </div>
-
-  </div>
+  <div id="head-images" class="container-fluid"></div>
 
   <!-- TODO destination input / check in input / check out 
   input -->
@@ -68,20 +63,7 @@
         <input type="date" class="form-control calendar" placeholder="Check Out">
       </div>
       <div class="col-sm-1">
-        <button data-toggle="dropdown" class="form-control dropdown-toggle">Guests<span class="caret"></span></button>
-  <ul class="dropdown-menu">
-    <option value="1">1</option>
-    <option value="2">2</option>
-    <option value="3">3</option>
-    <option value="4">4</option>
-    <option value="5">5</option>
-    <option value="6">6</option>
-    <option value="7">7</option>
-    <option value="8">8</option>
-    <option value="9">9</option>
-    <option value="10">10</option>
-    
-  </ul>
+        <input type="dropdown" class="form-control dropdown" placeholder="Guests">
       </div>
       <div class="col-sm-1">
         <button class="btn btn-primary submit">Search</button>
@@ -91,9 +73,6 @@
  </div>
  
   <!-- TODO Slide Down filter -->
-
-  <!-- List items -->
-  
 
   <!-- Content Break-->
   <div class="container-fluid">
