--- a/home.html
+++ b/home.html
@@ -88,7 +88,17 @@
   <!-- TODO Slide Down filter -->
 
   <!-- List items -->
-  
+  <div class="container-fluid hotel-list-container">
+    <div class="col-xs-12 text-center">
+      <h2 id="hotel-list-title">Hotels in Paris</h2>
+    </div>
+    <div class="row paris-hotel">
+      <div class="col-xs-12 col-md-8 col-md-offset-2 hotel">
+        <h4 class="text-center">Hotel 1</h4>
+        <img class="pull-left hotel-img" src="img/hotel1_comp.jpg">
+      </div>
+    </div>
+  </div>
 
   <!-- Content Break-->
   <div class="container-fluid">
