--- a/home.html
+++ b/home.html
@@ -104,6 +104,8 @@
         <div class="col-xs-12 col-sm-12 col-md-8 text-center">
           <p class="hotel-description">Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.</p>
         </div>
+        <div class="col-xs-12 text-center">Ratings</div>
+        <div class="col-xs-12 text-center">Reviews</div>
       </div>
     </div>
 
