--- a/home.html
+++ b/home.html
@@ -11,14 +11,12 @@
 
   <!--css-->
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link href="tipuesearch/tipuesearch.css" rel="stylesheet">
-
 </head>
 
 <body>
 
-  <!-- TODO Nav Section -->
-  <div class="navbar navbar-inverse navbar-fixed-top">
+  <!-- Nav Section -->
+  <div class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
 
       <div id="nav-scroller" class="navbar-header">
@@ -44,7 +42,7 @@
     </div>
   </div>
 
-  <!-- TODO Header Section -->
+  <!-- Header Section -->
 
   <!-- Image changer -->
   <div id="head-images" class="container-fluid"></div>
@@ -54,11 +52,10 @@
   <div class="container-fluid">
   <div class="row">
     <form class="form-group searchbar">
-      <div class="col-sm-4 col-sm-offset-1 default-suggestions">
-        <input type="text" class="form-control" name="q" id="tipue_search_input" autocomplete="off" required
+      <div class="col-sm-4 col-sm-offset-1">
+        <input type="text" class="form-control" id="search" 
         placeholder="Where do you want to go?">
       </div>
-      <div id="tipue_search_content"></div>
       <div class="col-sm-2">
         <input type="date" class="form-control calendar" placeholder="Check In">
       </div>
@@ -66,7 +63,20 @@
         <input type="date" class="form-control calendar" placeholder="Check Out">
       </div>
       <div class="col-sm-1">
-        <input type="dropdown" class="form-control dropdown" placeholder="Guests">
+        <button data-toggle="dropdown" class="form-control dropdown-toggle">Guests<span class="caret"></span></button>
+  <ul class="dropdown-menu">
+    <option value="1">1</option>
+    <option value="2">2</option>
+    <option value="3">3</option>
+    <option value="4">4</option>
+    <option value="5">5</option>
+    <option value="6">6</option>
+    <option value="7">7</option>
+    <option value="8">8</option>
+    <option value="9">9</option>
+    <option value="10">10</option>
+    
+  </ul>
       </div>
       <div class="col-sm-1">
         <button class="btn btn-primary submit">Search</button>
@@ -76,6 +86,9 @@
  </div>
  
   <!-- TODO Slide Down filter -->
+
+  <!-- List items -->
+  
 
   <!-- Content Break-->
   <div class="container-fluid">
@@ -153,9 +166,7 @@
   <!-- TODO Modals for each hotel, including an ignore button that closes modal and removes hotel from list -->
 
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-  <script src="tipuesearch/tipuesearch_content.js"></script>
-  <script src="tipuesearch/tipuesearch_set.js"></script>
-  <script src="tipuesearch/tipuesearch.min.js"></script>
+  <script type="text/javascript" src="js/index.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 </body>
 
