--- a/home.html
+++ b/home.html
@@ -11,6 +11,9 @@
 
   <!--css-->
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/classic.css">
+  <link rel="stylesheet" type="text/css" href="css/classic.date.css">
+  <link rel="stylesheet" type="text/css" href="css/classic.time.css">
 </head>
 
 <body>
@@ -57,10 +60,10 @@
         placeholder="Where do you want to go?">
       </div>
       <div class="col-sm-2">
-        <input type="date" class="form-control calendar" placeholder="Check In">
+        <input type="text" class="form-control  form-group date calendar" placeholder="Check In">
       </div>
       <div class="col-sm-2">
-        <input type="date" class="form-control calendar" placeholder="Check Out">
+        <input type="text" class="form-control  form-group date calendar" placeholder="Check Out">
       </div>
       <div class="col-sm-1">
         <button data-toggle="dropdown" class="form-control dropdown-toggle">Guests<span class="caret"></span></button>
@@ -307,6 +310,10 @@
   <!-- TODO Modals for each hotel, including an ignore button that closes modal and removes hotel from list -->
 
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script src="js/picker.js"></script>
+  <script src="js/picker.date.js"></script>
+  <script src="js/picker.time.js"></script>
+  <script src="js/legacy.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 </body>
