--- a/home.html
+++ b/home.html
@@ -79,7 +79,7 @@
   </ul>
       </div>
       <div class="col-sm-1">
-        <button class="btn btn-primary submit">Search</button>
+        <button id="search-button" class="btn btn-primary submit">Search</button>
       </div>
     </form> 
   </div>
@@ -88,7 +88,7 @@
   <!-- TODO Slide Down filter -->
 
   <!-- List items -->
-  <div class="container-fluid hotel-list-container">
+  <div id="hotel-list-area" class="container-fluid hotel-list-container">
     <div class="col-xs-12 text-center">
       <h2 id="hotel-list-title">Hotels in Paris</h2>
     </div>
