added header title with css props

--- a/home.html
+++ b/home.html
@@ -45,10 +45,18 @@
     </div>
   </div>
 
-  <!-- Header Section -->
+ 
 
   <!-- Image changer -->
-  <div id="head-images" class="container-fluid"></div>
+  <div id="head-images" class="container-fluid">
+  <!-- Header Section -->
+    <div class="row">
+      <div class="col-sm-8 col-sm-offset-2">
+        <h1 id="brand">Make Your Dream Vacation A Reality</h1>
+    </div>
+  </div>
+  </div>
+  
 
   <!-- TODO destination input / check in input / check out 
   input -->
