added half the functionality to search.  Need to filter rows by location, uppercase the first letter in the title, and remove existing results and replace when user searches for something else

--- a/home.html
+++ b/home.html
@@ -93,7 +93,7 @@
   <!-- List items -->
   <div id="hotel-list-area" class="container-fluid hotel-list-container">
     <div class="col-xs-12 text-center">
-      <h2 id="hotel-list-title">Hotels in Paris</h2>
+      <h2 id="hotel-list-title">Hotels in <span class="hotel-list-location"></span></h2>
     </div>
 
     <div id="paris-hotel1" class="row paris-hotel">
@@ -228,7 +228,7 @@
           <div class="modal-footer">
             <button class="btn btn-primary">Reserve</button>
             <button class="btn btn-default" data-dismiss="modal">Cancel</button>
-            <button class="btn btn-danger">Ignore this Hotel</button>
+            <button class="btn btn-danger" data-dismiss="modal">Ignore this Hotel</button>
           </div>
         </div>
       </div>
