add prelim ignore btn function

--- a/home.html
+++ b/home.html
@@ -236,7 +236,7 @@
           <div class="modal-footer">
             <button class="btn btn-primary">Reserve</button>
             <button class="btn btn-default" data-dismiss="modal">Cancel</button>
-            <button class="btn btn-danger">Ignore this Hotel</button>
+            <button class="btn btn-danger" data-dismiss="modal">Ignore this Hotel</button>
           </div>
         </div>
       </div>
