--- a/home.html
+++ b/home.html
@@ -96,7 +96,7 @@
       <h2 id="hotel-list-title">Hotels in <span class="hotel-list-location"></span></h2>
     </div>
 
-    <div id="paris-hotel1" class="row paris-hotel">
+    <div id="paris-hotel1" class="row paris">
       <div class="col-xs-12 col-md-8 col-md-offset-2 hotel" data-toggle="modal" data-target="#paris-hotel1-modal">
         <div class="col-xs-12 text-center">
           <h3 class="hotel-name">Chez Sandrine</h3>
@@ -113,7 +113,7 @@
       </div>
     </div>
 
-    <div id="paris-hotel2" class="row paris-hotel">
+    <div id="paris-hotel2" class="row paris">
       <div class="col-xs-12 col-md-8 col-md-offset-2 hotel" data-toggle="modal" data-target="#paris-hotel1-modal">
         <div class="col-xs-12 text-center">
           <h3 class="hotel-name">Hotel Hubris</h3>
@@ -130,7 +130,7 @@
       </div>
     </div>
 
-    <div id="paris-hotel3" class="row paris-hotel">
+    <div id="paris-hotel3" class="row paris">
       <div class="col-xs-12 col-md-8 col-md-offset-2 hotel" data-toggle="modal" data-target="#paris-hotel1-modal">
         <div class="col-xs-12 text-center">
           <h3 class="hotel-name">Le Chateau à Bobigny</h3>
@@ -147,7 +147,7 @@
       </div>
     </div>
 
-    <div id="london-hotel1" class="row london-hotel">
+    <div id="london-hotel1" class="row london">
       <div class="col-xs-12 col-md-8 col-md-offset-2 hotel" data-toggle="modal" data-target="#paris-hotel1-modal">
         <div class="col-xs-12 text-center">
           <h3 class="hotel-name">The Chipper Hotel</h3>
