--- a/home.html
+++ b/home.html
@@ -107,7 +107,7 @@
     </div>
 
     <div id="paris-hotel1" class="row paris">
-      <div class="col-xs-12 col-md-8 col-md-offset-2 hotel" data-toggle="modal" data-target="#paris-hotel1-modal">
+      <div class="col-xs-12 col-md-8 col-md-offset-2 hotel" data-toggle="modal">
         <div class="col-xs-12 text-center">
           <h3 class="hotel-name">Chez Sandrine</h3>
         </div>
@@ -124,7 +124,7 @@
     </div>
 
     <div id="paris-hotel2" class="row paris">
-      <div class="col-xs-12 col-md-8 col-md-offset-2 hotel" data-toggle="modal" data-target="#paris-hotel1-modal">
+      <div class="col-xs-12 col-md-8 col-md-offset-2 hotel" data-toggle="modal">
         <div class="col-xs-12 text-center">
           <h3 class="hotel-name">Hotel Hubris</h3>
         </div>
@@ -141,7 +141,7 @@
     </div>
 
     <div id="paris-hotel3" class="row paris">
-      <div class="col-xs-12 col-md-8 col-md-offset-2 hotel" data-toggle="modal" data-target="#paris-hotel1-modal">
+      <div class="col-xs-12 col-md-8 col-md-offset-2 hotel" data-toggle="modal">
         <div class="col-xs-12 text-center">
           <h3 class="hotel-name">Le Chateau à Bobigny</h3>
         </div>
@@ -158,7 +158,7 @@
     </div>
 
     <div id="london-hotel1" class="row london">
-      <div class="col-xs-12 col-md-8 col-md-offset-2 hotel" data-toggle="modal" data-target="#paris-hotel1-modal">
+      <div class="col-xs-12 col-md-8 col-md-offset-2 hotel" data-toggle="modal">
         <div class="col-xs-12 text-center">
           <h3 class="hotel-name">The Chipper Hotel</h3>
         </div>
@@ -178,7 +178,7 @@
 
   <!-- PARIS MODALS -->
 
-    <div class="modal" id="paris-hotel1-modal">
+    <div class="modal" id="main-modal">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
@@ -219,19 +219,6 @@
               </div>
               
               <hr />
-
-              <div class="row user-review">
-                <div class="col-xs-12">
-                  <p class="user">John wrote:</p>
-                </div>
-                <div class="col-xs-12">
-                  <p class="user-review">Not a bad place.  A bit too much cigar smoke for my taste, and the landlady can't seem to keep her hands off me, even though I keep telling her I have a girlfriend.  The atmosphere is good though.</p>
-                </div>
-                <div class="col-xs-12">
-                  <p class="user-rating">***</p>
-                </div>
-              </div>
-
             </div>
 
           </div>
