added string interpolation to modal header, need to do the same with description and price, as well as reviews

--- a/home.html
+++ b/home.html
@@ -183,7 +183,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <button class="close" data-dismiss="modal" data-backdrop="static">&times;</button>
-            <h2 class="modal-title text-center">Chez Sandrine</h2>
+            <h2 id="modal-title" class="text-center"></h2>
           </div>
           <div class="modal-body">
             <div class="row">
@@ -191,7 +191,7 @@
                 <img class="modal-pic" src="img/hotel1_comp.jpg" alt="paris hotel1 modal pic">
               </div>
               <div class="col-xs-12 text-center">
-                <p class="modal-hotel-description">Venez Chez Sandrine!  All are welcome in this quaint little bistro.  Hang your coats at the door, play a game of pool on our old table.  Listen to the sound of jazz fill the night.  And when you get too tired, or have had one too many, kick off your shoes and stay the night.</p>
+                <p id="modal-hotel-description">Venez Chez Sandrine!  All are welcome in this quaint little bistro.  Hang your coats at the door, play a game of pool on our old table.  Listen to the sound of jazz fill the night.  And when you get too tired, or have had one too many, kick off your shoes and stay the night.</p>
               </div>
             </div>
             <div class="row">
