passing hotel description into modal

--- a/home.html
+++ b/home.html
@@ -116,6 +116,7 @@
         </div>
         <div class="col-xs-12 col-sm-12 col-md-8 text-center">
           <p class="hotel-description pull-left">A nice little old fashioned little hotel and bistro.  Sandrine is always glad to see you.</p>
+          <p class="modal-description hidden">Venez Chez Sandrine!  All are welcome in this quaint little bistro.  Hang your coats at the door, play a game of pool on our old table.  Listen to the sound of jazz fill the night.  And when you get too tired, or have had one too many, kick off your shoes and stay the night.</p>
         </div>
         <div class="col-xs-10 col-xs-offset-1">
           <p class="hotel-price-p pull-right"><span id="paris-hotel1-price">$120</span> per night</p>
@@ -191,7 +192,7 @@
                 <img class="modal-pic" src="img/hotel1_comp.jpg" alt="paris hotel1 modal pic">
               </div>
               <div class="col-xs-12 text-center">
-                <p id="modal-hotel-description">Venez Chez Sandrine!  All are welcome in this quaint little bistro.  Hang your coats at the door, play a game of pool on our old table.  Listen to the sound of jazz fill the night.  And when you get too tired, or have had one too many, kick off your shoes and stay the night.</p>
+                <p id="modal-hotel-description"></p>
               </div>
             </div>
             <div class="row">
