--- a/home.html
+++ b/home.html
@@ -119,7 +119,7 @@
           <p class="modal-description hidden">Venez Chez Sandrine!  All are welcome in this quaint little bistro.  Hang your coats at the door, play a game of pool on our old table.  Listen to the sound of jazz fill the night.  And when you get too tired, or have had one too many, kick off your shoes and stay the night.</p>
         </div>
         <div class="col-xs-10 col-xs-offset-1">
-          <p class="hotel-price-p pull-right"><span id="paris-hotel1-price">$120</span> per night</p>
+          <p class="hotel-price-p pull-right"><span class="hotel-price">$120</span> per night</p>
         </div>
       </div>
     </div>
@@ -134,9 +134,10 @@
         </div>
         <div class="col-xs-12 col-sm-12 col-md-8 text-center">
           <p class="hotel-description pull-left">Situated in the 2nd arrondissement, this hotel provides all amenities that even the most discerning visitor could want.</p>
+          <p class="modal-description hidden"></p>
         </div>
         <div class="col-xs-10 col-xs-offset-1">
-          <p class="hotel-price-p pull-right"><span id="paris-hotel1-price">$260</span> per night</p>
+          <p class="hotel-price-p pull-right"><span class="hotel-price">$260</span> per night</p>
         </div>
       </div>
     </div>
@@ -151,9 +152,10 @@
         </div>
         <div class="col-xs-12 col-sm-12 col-md-8 text-center">
           <p class="hotel-description pull-left">A diamond in the rough.  If you need a nice place to stay near Paris and you are on a budget, this one is for you.  Just don't go out past 9pm or make direct eye contact with the locals and you'll be fine.</p>
+          <p class="modal-description hidden"></p>
         </div>
         <div class="col-xs-10 col-xs-offset-1">
-          <p class="hotel-price-p pull-right"><span id="paris-hotel1-price">$70</span> per night</p>
+          <p class="hotel-price-p pull-right"><span class="hotel-price">$70</span> per night</p>
         </div>
       </div>
     </div>
@@ -168,9 +170,10 @@
         </div>
         <div class="col-xs-12 col-sm-12 col-md-8 text-center">
           <p class="hotel-description pull-left">This hotel is right in the heart of the city!</p>
+          <p class="modal-description hidden"></p>
         </div>
         <div class="col-xs-10 col-xs-offset-1">
-          <p class="hotel-price-p pull-right"><span id="paris-hotel1-price">$125</span> per night</p>
+          <p class="hotel-price-p pull-right"><span class="hotel-price">$125</span> per night</p>
         </div>
       </div>
     </div>    
@@ -197,7 +200,7 @@
             </div>
             <div class="row">
               <div class="col-xs-6 text-center">
-                <p class="modal-hotel-price"><span id="modal-paris-hotel1-price">$120</span> per night</p>
+                <p class="modal-hotel-price"><span id="modal-price">$120</span> per night</p>
               </div>
               <div class="col-xs-6 text-center">
                 <p class="modal-hotel-reviews">See Reviews</p>
