--- a/home.html
+++ b/home.html
@@ -75,7 +75,7 @@
       <div class="col-sm-2">
         <input id="checkout-input" type="text" class="form-control form-group date calendar" placeholder="Check Out">
       </div>
-      <div class="col-sm-1">
+      <div class="col-sm-2">
         <button data-toggle="dropdown" class="form-control dropdown-toggle">Guests<span class="caret"></span></button>
   <ul class="dropdown-menu">
     <option value="1">1</option>
@@ -107,7 +107,7 @@
     </div>
 
     <div id="paris-hotel1" class="row paris">
-      <div class="col-xs-12 col-md-8 col-md-offset-2 hotel" data-toggle="modal">
+      <div class="col-xs-12 col-md-8 col-md-offset-2 hotel" data-toggle="modal" data-target="#paris-hotel1-modal">
         <div class="col-xs-12 text-center">
           <h3 class="hotel-name">Chez Sandrine</h3>
         </div>
@@ -124,7 +124,7 @@
     </div>
 
     <div id="paris-hotel2" class="row paris">
-      <div class="col-xs-12 col-md-8 col-md-offset-2 hotel" data-toggle="modal">
+      <div class="col-xs-12 col-md-8 col-md-offset-2 hotel" data-toggle="modal" data-target="#paris-hotel1-modal">
         <div class="col-xs-12 text-center">
           <h3 class="hotel-name">Hotel Hubris</h3>
         </div>
@@ -141,7 +141,7 @@
     </div>
 
     <div id="paris-hotel3" class="row paris">
-      <div class="col-xs-12 col-md-8 col-md-offset-2 hotel" data-toggle="modal">
+      <div class="col-xs-12 col-md-8 col-md-offset-2 hotel" data-toggle="modal" data-target="#paris-hotel1-modal">
         <div class="col-xs-12 text-center">
           <h3 class="hotel-name">Le Chateau à Bobigny</h3>
         </div>
@@ -158,7 +158,7 @@
     </div>
 
     <div id="london-hotel1" class="row london">
-      <div class="col-xs-12 col-md-8 col-md-offset-2 hotel" data-toggle="modal">
+      <div class="col-xs-12 col-md-8 col-md-offset-2 hotel" data-toggle="modal" data-target="#paris-hotel1-modal">
         <div class="col-xs-12 text-center">
           <h3 class="hotel-name">The Chipper Hotel</h3>
         </div>
@@ -178,12 +178,12 @@
 
   <!-- PARIS MODALS -->
 
-    <div class="modal" id="main-modal">
+    <div class="modal" id="paris-hotel1-modal">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
             <button class="close" data-dismiss="modal" data-backdrop="static">&times;</button>
-            <h2 id="modal-title" class="text-center"></h2>
+            <h2 class="modal-title text-center">Chez Sandrine</h2>
           </div>
           <div class="modal-body">
             <div class="row">
@@ -191,7 +191,7 @@
                 <img class="modal-pic" src="img/hotel1_comp.jpg" alt="paris hotel1 modal pic">
               </div>
               <div class="col-xs-12 text-center">
-                <p id="modal-hotel-description">Venez Chez Sandrine!  All are welcome in this quaint little bistro.  Hang your coats at the door, play a game of pool on our old table.  Listen to the sound of jazz fill the night.  And when you get too tired, or have had one too many, kick off your shoes and stay the night.</p>
+                <p class="modal-hotel-description">Venez Chez Sandrine!  All are welcome in this quaint little bistro.  Hang your coats at the door, play a game of pool on our old table.  Listen to the sound of jazz fill the night.  And when you get too tired, or have had one too many, kick off your shoes and stay the night.</p>
               </div>
             </div>
             <div class="row">
@@ -219,6 +219,19 @@
               </div>
               
               <hr />
+
+              <div class="row user-review">
+                <div class="col-xs-12">
+                  <p class="user">John wrote:</p>
+                </div>
+                <div class="col-xs-12">
+                  <p class="user-review">Not a bad place.  A bit too much cigar smoke for my taste, and the landlady can't seem to keep her hands off me, even though I keep telling her I have a girlfriend.  The atmosphere is good though.</p>
+                </div>
+                <div class="col-xs-12">
+                  <p class="user-rating">***</p>
+                </div>
+              </div>
+
             </div>
 
           </div>
