--- a/home.html
+++ b/home.html
@@ -92,7 +92,7 @@
   </ul>
       </div>
       <div class="col-sm-1">
-        <button id="search-button" class="btn btn-primary submit">Search</button>
+        <button id="search-button" class=" form-control btn btn-primary submit">Search</button>
       </div>
     </form> 
   </div>
