--- a/home.html
+++ b/home.html
@@ -134,10 +134,10 @@
         </div>
         <div class="col-xs-12 col-sm-12 col-md-8 text-center">
           <p class="hotel-description pull-left">Situated in the 2nd arrondissement, this hotel provides all amenities that even the most discerning visitor could want.</p>
-          <p class="modal-description hidden"></p>
+          <p class="modal-description hidden">We here at Hotel Hubris aim to provide the finest lodgings and entertainment that money can buy. </p>
         </div>
         <div class="col-xs-10 col-xs-offset-1">
-          <p class="hotel-price-p pull-right"><span class="hotel-price">$260</span> per night</p>
+          <p class="hotel-price-p pull-right"><span class="hotel-price">$1260</span> per night</p>
         </div>
       </div>
     </div>
