--- a/home.html
+++ b/home.html
@@ -134,7 +134,7 @@
         </div>
         <div class="col-xs-12 col-sm-12 col-md-8 text-center">
           <p class="hotel-description pull-left">Situated in the 2nd arrondissement, this hotel provides all amenities that even the most discerning visitor could want.</p>
-          <p class="modal-description hidden">We here at Hotel Hubris aim to provide the finest lodgings and entertainment that money can buy. </p>
+          <p class="modal-description hidden">We here at Hotel Hubris aim to provide the finest lodgings and entertainment that money can buy. From fine dining to shows involving trained walruses, you will have endless amounts of fun.</p>
         </div>
         <div class="col-xs-10 col-xs-offset-1">
           <p class="hotel-price-p pull-right"><span class="hotel-price">$1260</span> per night</p>
