added a little slide effect on header images on search click

--- a/home.html
+++ b/home.html
@@ -119,7 +119,7 @@
           <p class="modal-description hidden">Venez Chez Sandrine!  All are welcome in this quaint little bistro.  Hang your coats at the door, play a game of pool on our old table.  Listen to the sound of jazz fill the night.  And when you get too tired, or have had one too many, kick off your shoes and stay the night.</p>
         </div>
         <div class="col-xs-10 col-xs-offset-1">
-          <p class="hotel-price-p pull-right"><span class="hotel-price">$120</span> per night</p>
+          <p class="hotel-price-p pull-right"><span class="hotel-price">$100</span> per night</p>
         </div>
       </div>
     </div>
@@ -151,8 +151,8 @@
           <img class="hotel-img" src="img/hotel1_comp.jpg">
         </div>
         <div class="col-xs-12 col-sm-12 col-md-8 text-center">
-          <p class="hotel-description pull-left">A diamond in the rough.  If you need a nice place to stay near Paris and you are on a budget, this one is for you.  Just don't go out past 9pm or make direct eye contact with the locals and you'll be fine.</p>
-          <p class="modal-description hidden"></p>
+          <p class="hotel-description pull-left">A diamond in the rough.  If you need a nice place to stay near Paris and you are on a budget, this hotel is for you.</p>
+          <p class="modal-description hidden">Located in the heart of Bobigny, just north of Paris, this hotel gives you easy access to the city while providing an affordable way to spend your vacation.</p>
         </div>
         <div class="col-xs-10 col-xs-offset-1">
           <p class="hotel-price-p pull-right"><span class="hotel-price">$70</span> per night</p>
@@ -182,7 +182,7 @@
 
   <!-- PARIS MODALS -->
 
-    <div class="modal" id="main-modal">
+    <div class="modal fade" id="main-modal">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
