added ignore button functionality

--- a/home.html
+++ b/home.html
@@ -265,7 +265,7 @@
           <div class="modal-footer">
             <button class="btn btn-primary">Reserve</button>
             <button class="btn btn-default" data-dismiss="modal">Cancel</button>
-            <button class="btn btn-danger" data-dismiss="modal">Ignore this Hotel</button>
+            <button id="ignore-hotel" class="btn btn-danger" data-dismiss="modal">Ignore this Hotel</button>
           </div>
         </div>
       </div>
