--- a/home.html
+++ b/home.html
@@ -106,7 +106,7 @@
       <h2 id="hotel-list-title">Hotels in <span class="hotel-list-location"></span></h2>
     </div>
 
-    <div id="paris-hotel1" class="row paris">
+    <div id="paris-hotel1" class="row paris listing">
       <div class="col-xs-12 col-md-8 col-md-offset-2 hotel" data-toggle="modal">
         <div class="col-xs-12 text-center">
           <h2 class="hotel-name">Chez Sandrine</h2>
@@ -124,7 +124,7 @@
       </div>
     </div>
 
-    <div id="paris-hotel2" class="row paris">
+    <div id="paris-hotel2" class="row paris listing">
       <div class="col-xs-12 col-md-8 col-md-offset-2 hotel" data-toggle="modal">
         <div class="col-xs-12 text-center">
           <h2 class="hotel-name">Hotel Hubris</h2>
@@ -142,7 +142,7 @@
       </div>
     </div>
 
-    <div id="paris-hotel3" class="row paris">
+    <div id="paris-hotel3" class="row paris listing">
       <div class="col-xs-12 col-md-8 col-md-offset-2 hotel" data-toggle="modal">
         <div class="col-xs-12 text-center">
           <h2 class="hotel-name">Le Chateau à Bobigny</h2>
@@ -160,7 +160,7 @@
       </div>
     </div>
 
-    <div id="london-hotel1" class="row london">
+    <div id="london-hotel1" class="row london listing">
       <div class="col-xs-12 col-md-8 col-md-offset-2 hotel" data-toggle="modal">
         <div class="col-xs-12 text-center">
           <h2 class="hotel-name">The Chipper Hotel</h2>
@@ -178,7 +178,7 @@
       </div>
     </div>
 
-    <div id="london-hotel2" class="row london">
+    <div id="london-hotel2" class="row london listing">
       <div class="col-xs-12 col-md-8 col-md-offset-2 hotel" data-toggle="modal">
         <div class="col-xs-12 text-center">
           <h2 class="hotel-name">Ralphie's Inn</h2>
@@ -196,7 +196,7 @@
       </div>
     </div>  
 
-    <div id="london-hotel3" class="row london">
+    <div id="london-hotel3" class="row london listing">
       <div class="col-xs-12 col-md-8 col-md-offset-2 hotel" data-toggle="modal">
         <div class="col-xs-12 text-center">
           <h2 class="hotel-name">The Palace</h2>
