almost done with user review add, need to make them in a slideup state when loaded

--- a/home.html
+++ b/home.html
@@ -292,7 +292,7 @@
           <div class="item active" id="ny-item">
             <a href="#"><img src="img/NYC.jpg" alt="NYC" class="city"></a>
             <div class="carousel-caption">
-              <h3>New York City</h3>
+              <h3>New York</h3>
               <p>Big Apple</p>
             </div>
           </div>
