added more reviews

--- a/home.html
+++ b/home.html
@@ -123,6 +123,7 @@
         </div>
       </div>            
       <div class="row user-review hidden">
+        <hr />
         <div class="col-xs-12">
            <p class="user">Tom wrote:</p>
         </div>
@@ -132,7 +133,21 @@
         <div class="col-xs-12">
           <p class="user-rating">*****</p>
         </div>
-     </div>
+        <hr />
+      </div>
+      <div class="row user-review hidden">
+        <hr />
+        <div class="col-xs-12">
+           <p class="user">John wrote:</p>
+        </div>
+        <div class="col-xs-12">
+          <p class="user-review-description">I had a fun time there but lost a lot of money.  Beware of the hustlers at the pool table.</p>
+        </div>
+        <div class="col-xs-12">
+          <p class="user-rating">****</p>
+        </div>
+        <hr />
+      </div>
     </div>
 
     <div id="paris-hotel2" class="row paris listing">
@@ -150,6 +165,19 @@
         <div class="col-xs-10 col-xs-offset-1">
           <p class="hotel-price-p pull-right"><span class="hotel-price">$1260</span> per night</p>
         </div>
+      </div>
+      <div class="row user-review hidden">
+        <hr />
+        <div class="col-xs-12">
+           <p class="user">Rick wrote:</p>
+        </div>
+        <div class="col-xs-12">
+          <p class="user-review-description">Never been around more pompous and arrogant people...  Even the staff had an unshakeable air of superiority.  The walruses were pretty cool though.</p>
+        </div>
+        <div class="col-xs-12">
+          <p class="user-rating">**</p>
+        </div>
+        <hr />
       </div>
     </div>
 
@@ -169,6 +197,19 @@
           <p class="hotel-price-p pull-right"><span class="hotel-price">$70</span> per night</p>
         </div>
       </div>
+      <div class="row user-review hidden">
+        <hr />
+        <div class="col-xs-12">
+           <p class="user">Clara wrote:</p>
+        </div>
+        <div class="col-xs-12">
+          <p class="user-review-description">This place is an eyesore, but I did save a lot of money.</p>
+        </div>
+        <div class="col-xs-12">
+          <p class="user-rating">***</p>
+        </div>
+        <hr />
+      </div>
     </div>
 
     <div id="london-hotel1" class="row london listing">
@@ -186,6 +227,19 @@
         <div class="col-xs-10 col-xs-offset-1">
           <p class="hotel-price-p pull-right"><span class="hotel-price">$125</span> per night</p>
         </div>
+      </div>
+      <div class="row user-review hidden">
+        <hr />
+        <div class="col-xs-12">
+           <p class="user">Harold wrote:</p>
+        </div>
+        <div class="col-xs-12">
+          <p class="user-review-description">The service was great and I had a good view of London from my room.</p>
+        </div>
+        <div class="col-xs-12">
+          <p class="user-rating">****</p>
+        </div>
+        <hr />
       </div>
     </div>
 
