fixed a few things

--- a/home.html
+++ b/home.html
@@ -279,9 +279,11 @@
       </div>
     </div>    
 
+    <div class="los-angeles"></div>
+
   </div>
 
-  <!-- PARIS MODALS -->
+  <!-- MAIN MODAL -->
 
     <div class="modal fade" id="main-modal">
       <div class="modal-dialog">
