added empty val check and warning

--- a/home.html
+++ b/home.html
@@ -97,6 +97,11 @@
     </form> 
   </div>
  </div>
+
+  <!-- EMPTY INPUT WARNING -->
+  <div class="row">
+    <div id="input-warning" class="col-xs-4 col-xs-offset-4"></div>
+  </div>
  
   <!-- TODO Slide Down filter -->
 
@@ -277,9 +282,7 @@
           <p class="hotel-price-p pull-right"><span class="hotel-price">$650</span> per night</p>
         </div>
       </div>
-    </div>    
-
-    <div class="los-angeles"></div>
+    </div>
 
   </div>
 
