added reviews, need to do madrid

--- a/home.html
+++ b/home.html
@@ -264,6 +264,19 @@
           <p class="hotel-price-p pull-right"><span class="hotel-price">$90</span> per night</p>
         </div>
       </div>
+      <div class="row user-review hidden">
+        <hr />
+        <div class="col-xs-12">
+           <p class="user">Harold wrote:</p>
+        </div>
+        <div class="col-xs-12">
+          <p class="user-review-description">This was even better than the one at the center of London.  I had a few pints, accidentally threw a dart into the telly, and fought off a crowd of angry Arsenal fans trying to watch some footy.</p>
+        </div>
+        <div class="col-xs-12">
+          <p class="user-rating">*****</p>
+        </div>
+        <hr />
+      </div>
     </div>  
 
     <div id="london-hotel3" class="row london listing">
@@ -281,6 +294,19 @@
         <div class="col-xs-10 col-xs-offset-1">
           <p class="hotel-price-p pull-right"><span class="hotel-price">$650</span> per night</p>
         </div>
+      </div>
+      <div class="row user-review hidden">
+        <hr />
+        <div class="col-xs-12">
+           <p class="user">Harold wrote:</p>
+        </div>
+        <div class="col-xs-12">
+          <p class="user-review-description">The workers here can be right t***s.  Some cheeky fellow asked me if I wanted boar meat.  BOAR MEAT... with lager?  Come on, old chap.</p>
+        </div>
+        <div class="col-xs-12">
+          <p class="user-rating">***</p>
+        </div>
+        <hr />
       </div>
     </div>
 
