add madrid hotels and reviews

--- a/home.html
+++ b/home.html
@@ -301,10 +301,85 @@
            <p class="user">Harold wrote:</p>
         </div>
         <div class="col-xs-12">
-          <p class="user-review-description">The workers here can be right t***s.  Some cheeky fellow asked me if I wanted boar meat.  BOAR MEAT... with lager?  Come on, old chap.</p>
+          <p class="user-review-description">The workers here can be right t***s.  Some cheeky fellow asked me if I wanted boar meat.  BOAR MEAT... with lager?  Come on, mate.</p>
         </div>
         <div class="col-xs-12">
           <p class="user-rating">***</p>
+        </div>
+        <hr />
+      </div>
+    </div>
+
+    <div id="madrid-hotel1" class="row madrid listing">
+      <div class="col-xs-12 col-md-8 col-md-offset-2 hotel" data-toggle="modal">
+        <div class="col-xs-12 text-center">
+          <h2 class="hotel-name">Adelmo's</h2>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-4 text-center">
+          <img class="hotel-img" src="img/hotel1_comp.jpg">
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-8 text-center">
+          <p class="hotel-description pull-left">Enjoy the sights and sounds of old Madrid from a balcony.</p>
+          <p class="modal-description hidden">We are conveniently located near Madrid's major museums.</p>
+        </div>
+        <div class="col-xs-10 col-xs-offset-1">
+          <p class="hotel-price-p pull-right"><span class="hotel-price">$105</span> per night</p>
+        </div>
+      </div>
+      <div class="row user-review hidden">
+        <hr />
+        <div class="col-xs-12">
+           <p class="user">Harold wrote:</p>
+        </div>
+        <div class="col-xs-12">
+          <p class="user-review-description">Decided to take a trip to Spain.  Had some sangria and tapas here, but the local kept looking at me funny.</p>
+        </div>
+        <div class="col-xs-12">
+          <p class="user-rating">***</p>
+        </div>
+        <hr />
+      </div>
+    </div>
+
+    <div id="madrid-hotel1" class="row madrid listing">
+      <div class="col-xs-12 col-md-8 col-md-offset-2 hotel" data-toggle="modal">
+        <div class="col-xs-12 text-center">
+          <h2 class="hotel-name">Malagua</h2>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-4 text-center">
+          <img class="hotel-img" src="img/hotel1_comp.jpg">
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-8 text-center">
+          <p class="hotel-description pull-left">One of Madrid's finest hotels and restaurant.</p>
+          <p class="modal-description hidden">This hotel and restaurant has received numerous awards. Experience the best that Madrid has to offer.</p>
+        </div>
+        <div class="col-xs-10 col-xs-offset-1">
+          <p class="hotel-price-p pull-right"><span class="hotel-price">$250</span> per night</p>
+        </div>
+      </div>
+      <div class="row user-review hidden">
+        <hr />
+        <div class="col-xs-12">
+           <p class="user">Jana wrote:</p>
+        </div>
+        <div class="col-xs-12">
+          <p class="user-review-description">I am from Germany and I stay here everytime I am in the area.  This hotel has unmatched food and service.</p>
+        </div>
+        <div class="col-xs-12">
+          <p class="user-rating">*****</p>
+        </div>
+        <hr />
+      </div>
+      <div class="row user-review hidden">
+        <hr />
+        <div class="col-xs-12">
+           <p class="user">Harold wrote:</p>
+        </div>
+        <div class="col-xs-12">
+          <p class="user-review-description">I had a jolly good time.</p>
+        </div>
+        <div class="col-xs-12">
+          <p class="user-rating">*****</p>
         </div>
         <hr />
       </div>
