--- a/home.html
+++ b/home.html
@@ -443,7 +443,7 @@
           <li data-target="#vacationCarousel" data-slide-to="0" class="active"></li>
           <li data-target="#vacationCarousel" data-slide-to="1"></li>
           <li data-target="#vacationCarousel" data-slide-to="2"></li>
-          <li data-target="#vacationCarousel" data-slide-to="3"></li>
+          
         </ol>
 
         <!-- Wrapper for slides -->
@@ -468,7 +468,7 @@
             <a href="#"><img src="img/madrid.jpg" alt="Madrid" class="city"></a>
             <div class="carousel-caption">
               <h3>Madrid</h3>
-              <p>Spain/p>
+              <p>Spain</p>
             </div>
           </div>
         </div>
